# wasm-ar

./: .gitignore
client/: Cargo.toml
client/lib/shaders/: Cargo.toml
client/lib/shaders/src/: compile.rs
client/shaders/: cube.frag  cube.vert
client/src/: app_state.rs  client.rs  gl_setup.rs  lib.rs  shaders.rs  utils.rs
client/src/shaders/: color2d_gradient.rs  cube.rs
client/tests/: web.rs
lib/: Cargo.toml
lib/src/: app_state.rs  lib.rs  math.rs  shaders.rs  universe.rs  utils.rs
lib/src/shaders/: color2d.rs  color2d_gradient.rs  create.rs
lib/tests/: web.rs
webapp/: index.html  index.js  package.json
